<resources>
    <string name="app_name">Currenyconvert</string>
    <string name="united_states_dollar_usd">United States dollar(USD)</string>
    <string name="euro_eur">Euro(EUR)</string>
    <string name="japanese_yen_jpy">Japanese yen(JPY)</string>
    <string name="mexican_peso_mxn">Mexican peso(MXN)</string>
    <string name="hong_kong_dollar_hkd">Hong Kong dollar(HKD)</string>
    <string name="convert">Convert</string>
</resources>
